--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "private-currency"
 version = "0.1.0"
 authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
+license = "Apache-2.0"
+publish = false
 
 [dependencies]
 exonum = "=0.9.4"
