--- a/.travis.yml
+++ b/.travis.yml
@@ -66,7 +66,7 @@ install:
 
 script:
 - cargo fmt -- --check
-- cargo check
+- cargo check --tests --examples
 - cargo clippy -- -D warnings
 - cargo test --tests
 - cargo test --doc
